[gd_scene load_steps=7 format=2]

[ext_resource path="res://imagenes/stars_background_resized.png" type="Texture" id=1]
[ext_resource path="res://fonts/Pixeboy-z8XGD.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/ConnectionPanelLobby.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
margin_right = 600.0
margin_bottom = 800.0

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 600.0
margin_bottom = 800.0
texture = ExtResource( 1 )

[node name="LabelBienvenida" type="Label" parent="."]
margin_right = 600.0
margin_bottom = 300.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.0588235, 0.690196, 0.780392, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "Bienvenido al Multijugador"
align = 1
valign = 1

[node name="ConnectionPanel" type="Panel" parent="."]
margin_left = 149.0
margin_top = 287.0
margin_right = 432.0
margin_bottom = 438.0
script = ExtResource( 3 )

[node name="LabelIPHost" type="Label" parent="ConnectionPanel"]
margin_left = 12.0
margin_top = 13.0
margin_right = 87.0
margin_bottom = 37.0
text = "IP del Host:"
align = 1
valign = 1

[node name="IPHostInput" type="LineEdit" parent="ConnectionPanel"]
margin_left = 100.0
margin_top = 13.0
margin_right = 271.0
margin_bottom = 37.0
custom_colors/font_color = Color( 1, 1, 1, 0.372549 )
text = "192.168...."

[node name="HostearButton" type="Button" parent="ConnectionPanel"]
margin_left = 198.0
margin_top = 75.0
margin_right = 268.0
margin_bottom = 102.0
text = "Hostear"

[node name="UnirseButton" type="Button" parent="ConnectionPanel"]
margin_left = 12.0
margin_top = 75.0
margin_right = 90.0
margin_bottom = 102.0
text = "Unirse"

[node name="StatusOk" type="Label" parent="ConnectionPanel"]
margin_left = 12.0
margin_top = 115.0
margin_right = 271.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( -544, 105 )
custom_colors/font_color = Color( 0.00392157, 0.662745, 0, 1 )
custom_fonts/font = SubResource( 2 )

[node name="StatusFail" type="Label" parent="ConnectionPanel"]
margin_left = 12.0
margin_top = 115.0
margin_right = 271.0
margin_bottom = 129.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )

[connection signal="pressed" from="ConnectionPanel/HostearButton" to="ConnectionPanel" method="_on_hostearButton_pressed"]
[connection signal="pressed" from="ConnectionPanel/UnirseButton" to="ConnectionPanel" method="_on_unirseButton_pressed"]
